--- a/app/src/main/res/layout-land/fragment_nota_list.xml
+++ b/app/src/main/res/layout-land/fragment_nota_list.xml
@@ -2,7 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/listPortrait"
+    android:id="@+id/listLandscape"
     android:name="com.example.constrainlayout.NotaFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,4 +11,4 @@
     app:layoutManager="LinearLayoutManager"
     tools:context=".NotaFragment"
     tools:listitem="@layout/fragment_nota"
-    tools:viewBindingIgnore="true" />
+    tools:viewBindingIgnore="true"/>
